--- a/src/NEET/NeetExplanation.css
+++ b/src/NEET/NeetExplanation.css
@@ -1,10 +1,11 @@
 /* Main Container */
 .explanation-container {
   max-width: 900px;
-  margin: 20px auto;
+  /* margin: 20px auto; */
+  margin: 0 auto 20px auto;
   padding: 20px;
   border-radius: 15px;
-  margin-top: -10px;
+  /* margin-top: -10px; */
   font-family: 'Arial', sans-serif;
   color: #333;
 
